[package]
name = "intuple"
version = "0.2.0"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Convert struct into/from tuple (of references) - recursive, ignore fields"
repository = "https://github.com/dekirisu/intuple/"
keywords = ["tuple","struct","into","from","recursive"]
categories = ["rust-patterns"]

[dependencies]
intuple_derive = {version="0.2.0", path="./derive"}

[workspace]
members = ["derive"]