[package]
name = "intuple"
version = "0.2.0"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Convert structs and enums into tuples (of refs) and back - recursive, ignore fields"
repository = "https://github.com/dekirisu/intuple/"
keywords = ["tuple","struct","enum","into","from"]
categories = ["rust-patterns"]

[dependencies]
intuple_derive = {version="0.2.0", path="./derive"}

[dev-dependencies]
serde_json = "1"

[workspace]
members = ["derive"]