[package]
name = "intuple_derive"
version = "0.2.0"
edition = "2021"

authors = ["Dekirisu <dekirisu@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "derive for intuple"
repository = "https://github.com/dekirisu/intuple/"
keywords = []
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"